<resources>
    <string name="app_name">TravelJournal</string>
    <string name="app_title">Travel Journal</string>
    <string name="title_text">LOGIN</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_button_text">LOGIN</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="description_text">About Us</string>
    <string name="contact_text">Contact</string>
    <string name="share_text">Share</string>
    <string name="header_text">Hotea Raluca</string>
    <string name="email_subtitle_text">ralucahotea1415@gmail.com</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="menu_about_us">AboutUs</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>
    <string name="price_text">Price</string>
    <string name="about_us_title">Meet Me</string>
    <string name="description"> I am an outgoing person and I make friends easily in new situations. I am passionate aboout programming.</string>
    <string name="contact_us">Contact Us</string>
    <string name="phone_text">Phone 0746******</string>
    <string name="email_text_contact">Email ralucahotea_1415@gmail.com</string>
    <string name="favorite_title">Favorite</string>
    <string name="fav">Favourite</string>
    <string name="share_text_view">Share</string>
    <string name="trip_name_edit_input">Trip Name</string>
    <string name="destination_text_input">Destination</string>
    <string name="city_break_check_text">City Break</string>
    <string name="sea_side_check_text">Sea Side</string>
    <string name="mountains_check_text">Mountains</string>
</resources>