<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login2"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_height_layout_size"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="@string/title_text"
        android:textSize="@dimen/login_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </TextView>

    <ImageView
        android:id="@+id/personIcon"
        android:layout_width="@dimen/person_icon_size"
        android:layout_height="@dimen/person_icon_size"
        android:background="@drawable/login_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText">

    </ImageView>

    <EditText
        android:id="@+id/email_id"
        android:layout_width="@dimen/login_email_width"
        android:layout_height="@dimen/login_email_height"
        android:layout_marginBottom="@dimen/margin_bottom_email_login"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/email_icon"
        android:drawableLeft="@drawable/email_icon"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="@dimen/username_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personIcon">

    </EditText>

    <EditText
        android:id="@+id/password_id"
        android:layout_width="@dimen/login_email_width"
        android:layout_height="@dimen/login_email_height"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/password_icon"
        android:drawableLeft="@drawable/password_icon"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/username_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_id"
        app:layout_constraintVertical_bias="0.064">

    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="@dimen/login_button_height"
        android:background="@drawable/round_border"
        android:text="@string/login_button_text"
        app:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_id" />


</androidx.constraintlayout.widget.ConstraintLayout>